<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.example.moatamed.gproject.AccountSetting">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:src="@drawable/default_avtar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/display_name"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:id="@+id/settings_display_name"/>

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/first_grade"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:paddingLeft="16dp"
        android:paddingRight="20dp"
        android:text="@string/changer_image"
        android:onClick="BtnChose"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/settings_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/settings_image_btn"
        android:layout_below="@+id/settings_image_btn"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/change_stauts"
        android:onClick="BTnGo"
        android:textColor="@android:color/white" />

</RelativeLayout>
